# RAG-Pipeline-With-Observability

./: .env-example  README.md  main.py  pyproject.toml
app/ingest/: embed_qdrant.py  extract_text.py
app/utils/: settings.py
